# Oort-legacy

./: .gitignore  .gitmodules  COPYING.math3d  Makefile  Makefile.am  Makefile.osx  Makefile.win32  PKGBUILD  PKGBUILD.win32  README  README.md  TODO  api_sensors.c  api_team.c  api_team.h  autogen.sh  bullet.c  bullet.h  bullet.vala  config.sub  configure.ac  game-vala.vala  game.c  game.h  game.vala  gl-viewer.c  gl13.c  glutil.c  glutil.h  index.html  installer.nsi  lib.lua  main.c  orbit.lua  particle.c  particle.h  particlebench.c  physics.c  physics.h  recorder.c  (+34 more)
ais/: reference.lua
chrome-app/: manifest.json
cjson/: Makefile.am  cjson.vapi
common/: Makefile.am  constexpr.h  log.h  perf.h  resources.h
dedicated/: Makefile.am  oort-dedicated.vala  risc-dedicated.vala
devel/: bench-threads.sh  build-linux-dist.sh  build-linux.sh  build-nacl.sh  build-oortfs.rb  build-win32-dist.sh  build-win32.sh  nacl-publish.rb  nacl-release.sh  rescale-scenario.rb  run-local-tournament.sh  scenario_builder.rb  serve-nacl.sh
examples/: challenge01.lua  challenge02.lua  challenge03.lua  challenge04.lua  demo1.lua  demo2.lua  lib.lua  little_missile.lua  missile.lua  orbit.lua  realistic.vala  reference.lua  rock.lua  switch.lua
gl/: Makefile.am  buffer.h  check.h  gl.h  program.h  shader.h  texture.h
lua/: Makefile
lua/src/: Makefile  ldo.c  luaconf.h
lua_build/: Makefile.am  manifest-dist
luajit_build/: Makefile.am  manifest-dist
math3d/: Makefile.am  math3d.c  math3d.h  math3d.vapi
models/: assault_frigate.json  carrier.json  fighter.json  ion_cannon_frigate.json  missile.json  small_target.json  torpedo.json
nacl/: Makefile.am  main.c  main.vala  nacl.c  oort-nacl.vala  oort.html  oort.nmf
renderer/: .gitignore  Makefile.am  batch.h  batch.vala  bunch.h  font.c  font.h  glutil.c  glutil.h  glutil.vapi  model.vala  particle.c  particle.h  particle.vala  particle.vapi  perf.h  perf.vala  physics_debug_renderer.cc  physics_debug_renderer.h  renderer.cc  renderer.h  renderer.vala  shader.vala  textures.vala
renderer/batches/: beam.cc  beam.h  beam.vala  blur.cc  blur.h  boundary.vala  bullet.cc  bullet.h  bullet.vala  clear.cc  clear.h  particle.cc  particle.h  particle_batch.vala  ship.cc  ship.h  ship.vala  tail.cc  tail.h  tail.vala  text.cc  text.h
scenarios/: basic.json  basic.lua  benchmark.json  benchmark.lua  challenge01.json  challenge01.lua  challenge02.json  challenge02.lua  challenge03.json  challenge03.lua  challenge04.json  demo1.json  demo1.lua  demo2.json  furball.lua  furball2.json  furball3.json  furball4.json  horde.json  knife.json  lib.lua  missile_practice.lua
shaders/: beam.f.glsl  beam.v.glsl  bullet.f.glsl  bullet.v.glsl  gaussian.v.glsl  gaussian_horiz.f.glsl  gaussian_vert.f.glsl  identity.v.glsl  particle.f.glsl  particle.v.glsl  ship.f.glsl  ship.v.glsl  tail.v.glsl  text.f.glsl  text.v.glsl  texture.f.glsl
sim/: .gitignore  Makefile.am  ai.cc  ai.h  ai_lib.cc  ai_lib.h  api_sensors.c  api_sensors.h  api_team.h  beam.cc  beam.h  beam.vala  builtin_ai.cc  builtin_ai.h  bullet.cc  bullet.h  bullet.vala  config.vapi  csim.vapi  entity.cc  entity.h  explosion.cc  explosion.h  game.cc  game.h  game.vala  math_util.h  model.cc  model.h  oortfs.c  paths.vala  physics.cc  physics.h  physics.vala  resources.vala  scenario.cc  scenario.h  scenario.vala  ship.c  ship.cc  (+15 more)
solutions/: challenge01.lua  challenge02.lua  challenge03.lua  challenge04.lua
test/: .gitignore  Makefile.am  ball.cc  basic.cc  beam.cc  beam.scn  benchmark_bullet.cc  chase.cc  chase.scn  furball.cc  furball.scn  gun.cc  gun.scn  joust.cc  missile.cc  missile.scn  move.cc  move.scn  test-determinism.sh  test_syntax_errors.vala  testcase.h
test/scenarios/: simple.json  single.lua
tournament/: forum-bot.rb
tournament/lib/oort-tournament/: db.rb  forum.rb
ui/: Makefile.am  batch.vala  beam_program.vala  font.c  font.h  font.vapi  glutil.c  glutil.h  glutil.vapi  gui.h  log.vala  model.vala  oort.vala  particle.c  particle.h  particle.vapi  particle_program.vala  perf.vala  renderer.vala  risc.vala  shader.vala  ship_program.vala  tail_program.vala  textures.vala
ui/batches/: boundary.vala  bullet.vala  particle_batch.vala  ship.vala
ui/headless/: .gitignore  Makefile.am  main.cc
ui/nacl/: ai.cc  httpd.py  main.cc  oort-glibc.nmf  oort.css  oort.html  oort.js
ui/sdl/: .gitignore  Makefile.am  main.cc
vapi/: Makefile.am  cisc.vapi  gl.vapi  glew.vapi  lua.vapi  risc.vapi  vector.vapi
vector/: Makefile.am  mat4f.h  mat4f.vala  vec2d.h  vec2f.h  vec4f.h  vector.h  vector.vapi  vector_types.h
